--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
 		<!-- Styles -->
+		<link rel="stylesheet" href="./css/main.min.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
@@ -62,55 +63,63 @@
 		<main>
 			<!--Cекція герой-->
 			<section class="hero">
-				<div class="hero-container container">
-					<h1 class="hero-title">
+				<div class="container">
+					<h1 class="hero__title">
 						Эффективные решения <br />
 						для вашего бизнеса
 					</h1>
-					<button class="primary-button hero-btn" type="button" data-modal-open>Заказать услугу</button>
+					<button class="button button--interactive" type="button" data-modal-open>Заказать услугу</button>
 				</div>
 			</section>
 
 			<!--Cекція переваги компанії-->
-			<section class="section benefits">
+			<section class="benefits section">
 				<div class="container">
-					<h2 class="visually-hidden">Преимущества компании</h2>
-					<ul class="benefits-list list">
-						<li class="benefits-items">
-							<div class="benefits-pic">
-								<svg class="benefits-icon" width="70px" height="70px">
+					<h2 class="visually-hidden title">Преимущества компании</h2>
+					<ul class="benefits__list list">
+						<li class="benefits__items">
+							<div class="benefits__pic">
+								<svg class="benefits__icon" width="70px" height="70px">
 									<use href="./images/icons.svg#antenna"></use>
 								</svg>
 							</div>
-							<h3 class="subtitle">Внимание к деталям</h3>
-							<p class="desc"> Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
+							<h3 class="benefits__subtitle subtitle">Внимание к деталям</h3>
+							<p class="benefits__desc">
+								Идейные соображения, а также начало повседневной работы по формированию позиции.
+							</p>
 						</li>
-						<li class="benefits-items">
-							<div class="benefits-pic">
-								<svg class="benefits-icon" width="70px" height="70px">
+						<li class="benefits__items">
+							<div class="benefits__pic">
+								<svg class="benefits__icon" width="70px" height="70px">
 									<use href="./images/icons.svg#clock"></use>
 								</svg>
 							</div>
-							<h3 class="subtitle">Пунктуальность</h3>
-							<p class="desc"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
+							<h3 class="benefits__subtitle subtitle">Пунктуальность</h3>
+							<p class="benefits__desc">
+								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+							</p>
 						</li>
-						<li class="benefits-items">
-							<div class="benefits-pic">
-								<svg class="benefits-icon" width="70px" height="70px">
+						<li class="benefits__items">
+							<div class="benefits__pic">
+								<svg class="benefits__icon" width="70px" height="70px">
 									<use href="./images/icons.svg#diagram"></use>
 								</svg>
 							</div>
-							<h3 class="subtitle">Планирование</h3>
-							<p class="desc"> Равным образом консультация с широким активом в значительной степени обуславливает. </p>
+							<h3 class="benefits__subtitle subtitle">Планирование</h3>
+							<p class="benefits__desc">
+								Равным образом консультация с широким активом в значительной степени обуславливает.
+							</p>
 						</li>
-						<li class="benefits-items">
-							<div class="benefits-pic">
-								<svg class="benefits-icon" width="70px" height="70px">
+						<li class="benefits__items">
+							<div class="benefits__pic">
+								<svg class="benefits__icon" width="70px" height="70px">
 									<use href="./images/icons.svg#astronaut"></use>
 								</svg>
 							</div>
-							<h3 class="subtitle">Современные технологии</h3>
-							<p class="desc"> Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
+							<h3 class="benefits__subtitle subtitle">Современные технологии</h3>
+							<p class="benefits__desc">
+								Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+							</p>
 						</li>
 					</ul>
 				</div>
@@ -123,7 +132,7 @@
 					<ul class="work__list list">
 						<li class="work__item">
 							<img class="work__icon" src="./images/work-1.jpg" alt="Процесс написания кода" width="370" height="294" />
-							<p class="work__desc">Десктопные приложения</p>
+							<p class="work__subtitle subtitle subtitle--inverse subtitle--centered">Десктопные приложения</p>
 						</li>
 						<li class="work__item">
 							<img
@@ -133,11 +142,11 @@
 								width="370"
 								height="294"
 							/>
-							<p class="work__desc">Мобильные приложения</p>
+							<p class="work__subtitle subtitle subtitle--inverse subtitle--centered">Мобильные приложения</p>
 						</li>
 						<li class="work__item">
 							<img class="work__icon" src="./images/work-3.jpg" alt="Работа с цветом" width="370" height="294" />
-							<p class="work__desc">Дизайнерские решения</p>
+							<p class="work__subtitle subtitle subtitle--inverse subtitle--centered">Дизайнерские решения</p>
 						</li>
 					</ul>
 				</div>
@@ -289,38 +298,38 @@
 			</section>
 
 			<!-- Секція clients -->
-			<section class="section clients">
+			<section class="clients section">
 				<div class="container">
-					<h2 class="clients-title title">Постоянные клиенты</h2>
-					<ul class="clients-list list">
-						<li class="clients-item item"
-							><a class="clients-link link" href="#"
-								><svg class="clients-icon" width="106px" height="60px">
+					<h2 class="clients__title title">Постоянные клиенты</h2>
+					<ul class="clients__list list">
+						<li class="clients__item item"
+							><a class="clients__link link" href="#"
+								><svg class="clients__icon" width="106px" height="60px">
 									<use href="./images/icons.svg#logo-1"></use></svg></a
 						></li>
-						<li class="clients-item item"
-							><a class="clients-link link" href="#"
-								><svg class="clients-icon" width="106px" height="60px">
+						<li class="clients__item item"
+							><a class="clients__link link" href="#"
+								><svg class="clients__icon" width="106px" height="60px">
 									<use href="./images/icons.svg#logo-2"></use></svg></a
 						></li>
-						<li class="clients-item item"
-							><a class="clients-link link" href="#"
-								><svg class="clients-icon" width="106px" height="60px">
+						<li class="clients__item item"
+							><a class="clients__link link" href="#"
+								><svg class="clients__icon" width="106px" height="60px">
 									<use href="./images/icons.svg#logo-3"></use></svg></a
 						></li>
-						<li class="clients-item item"
-							><a class="clients-link link" href="#"
-								><svg class="clients-icon" width="106px" height="60px">
+						<li class="clients__item item"
+							><a class="clients__link link" href="#"
+								><svg class="clients__icon" width="106px" height="60px">
 									<use href="./images/icons.svg#logo-4"></use></svg></a
 						></li>
-						<li class="clients-item item"
-							><a class="clients-link link" href="#"
-								><svg class="clients-icon" width="106px" height="60px">
+						<li class="clients__item item"
+							><a class="clients__link link" href="#"
+								><svg class="clients__icon" width="106px" height="60px">
 									<use href="./images/icons.svg#logo-5"></use></svg></a
 						></li>
-						<li class="clients-item item"
-							><a class="clients-link link" href="#"
-								><svg class="clients-icon" width="106px" height="60px">
+						<li class="clients__item item"
+							><a class="clients__link link" href="#"
+								><svg class="clients__icon" width="106px" height="60px">
 									<use href="./images/icons.svg#logo-6"></use></svg></a
 						></li>
 					</ul>
@@ -330,14 +339,16 @@
 
 		<!--Cекція футер-->
 		<footer class="footer">
-			<div class="footer-container container">
-				<div class="fotter-adress-block">
-					<a class="footer-logo logo link" lang="en" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-					<address>
-						<ul class="list">
-							<li class="address-items">
+			<div class="footer__container container">
+				<div class="fotter__adress-block">
+					<a class="footer__logo logo link" lang="en" href="./index.html"
+						>Web<span class="logo__logo-part logo__logo-part--inverse">Studio</span></a
+					>
+					<address class="address">
+						<ul class="address__list list">
+							<li class="address__item">
 								<a
-									class="address link"
+									class="address__link address__link--lighter-color link"
 									href="https://goo.gl/maps/EDcTi23JJFDcdNwB6"
 									target="_blank"
 									rel="noopener norefferer "
@@ -345,47 +356,47 @@
 									г. Киев, пр-т Леси Украинки, 26
 								</a>
 							</li>
-							<li class="address-items">
-								<a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<li class="address__item">
+								<a class="address__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 							</li>
-							<li class="address-items">
-								<a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+							<li class="address__item">
+								<a class="address__link link" href="tel:+380961111111">+38 096 111 11 11</a>
 							</li>
 						</ul>
 					</address>
 				</div>
-				<div class="footer-socials-block">
-					<strong class="footer-socials-subtitle">Присоединяйтесь</strong>
-					<ul class="footer-socials list">
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="instagram-link">
-								<svg class="footer-socials-icon" width="20px" height="20px">
+				<div class="footer__socials-block">
+					<strong class="footer__subtitle subtitle subtitle--inverse subtitle--centered">Присоединяйтесь</strong>
+					<ul class="socials list">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="instagram-link">
+								<svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#instagram"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="twitter-link">
-								<svg class="footer-socials-icon" width="20px" height="20px">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="twitter-link">
+								<svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#twitter"></use></svg
 							></a>
 						</li>
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="facebook-link"
-								><svg class="footer-socials-icon" width="20px" height="20px">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="facebook-link"
+								><svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#facebook"></use></svg
 							></a>
 						</li>
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="linkedin-link"
-								><svg class="footer-socials-icon" width="20px" height="20px">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="linkedin-link"
+								><svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#linkedin"></use></svg
 							></a>
 						</li>
 					</ul>
 				</div>
 				<div class="footer-form-feild">
-					<strong class="footer-form-subtitle">Подпишитесь на рассылку</strong>
+					<strong class="footer__subtitle subtitle subtitle--inverse">Подпишитесь на рассылку</strong>
 
 					<form class="footer-form" autocomplete="off">
 						<input
@@ -395,7 +406,7 @@
 							id="mailing-email"
 							placeholder="E-mail"
 						/>
-						<button class="primary-button footer-btn" type="submit">
+						<button class="button footer-btn" type="submit">
 							Подписаться
 							<svg class="footer-form-icon" width="24px" height="24px">
 								<use href="./images/icons.svg#icon-send"></use>
@@ -409,8 +420,8 @@
 		<!-- Модальне вікно -->
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
-				<button class="modal-close-btn" type="button" data-modal-close>
-					<svg width="18px" height="18px">
+				<button class="modal__close-btn close-btn" type="button" data-modal-close>
+					<svg class="close-btn__icon" width="18px" height="18px">
 						<use href="./images/icons.svg#icon-close"></use>
 					</svg>
 				</button>
@@ -455,7 +466,7 @@
 						</span>
 					</label>
 
-					<button class="primary-button modal-submit-btn" type="submit">Отправить</button>
+					<button class="button modal-submit-btn" type="submit">Отправить</button>
 				</form>
 			</div>
 		</div>
