--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
 		<!-- Styles -->
+		<link rel="stylesheet" href="./css/main.min.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
@@ -66,174 +67,174 @@
 			<section class="portfolio">
 				<div class="container">
 					<h1 class="visually-hidden">Портфолио</h1>
-					<ul class="button-list list">
-						<li class="btn-items">
-							<button class="portfolio-btn current-btn" type="button">Все</button>
+					<ul class="portfolio__btn-list btn-list list">
+						<li class="btn-list__item">
+							<button class="secondary-btn secondary-btn--current" type="button">Все</button>
 						</li>
-						<li class="btn-items">
-							<button class="portfolio-btn" type="button">Веб-сайты</button>
+						<li class="btn-list__item">
+							<button class="secondary-btn" type="button">Веб-сайты</button>
 						</li>
-						<li class="btn-items">
-							<button class="portfolio-btn" type="button">Приложения</button>
+						<li class="btn-list__item">
+							<button class="secondary-btn" type="button">Приложения</button>
 						</li>
-						<li class="btn-items"><button class="portfolio-btn" type="button">Дизайн</button></li>
-						<li class="btn-items">
-							<button class="portfolio-btn" type="button">Маркетинг</button>
+						<li class="btn-list__item"><button class="secondary-btn" type="button">Дизайн</button></li>
+						<li class="btn-list__item">
+							<button class="secondary-btn" type="button">Маркетинг</button>
 						</li>
 					</ul>
-					<ul class="portfolio-works list">
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+					<ul class="card-set list">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-1.jpg" alt="Веб-сайт на экране ноутбука" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Технокряк</h2>
-									<p class="desc">Веб-сайт</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Технокряк</h2>
+									<p class="portfolio__desc">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-2.jpg" alt="Два баскетболиста" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
-									<p class="desc">Дизайн</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Постер New Orlean vs Golden Star</h2>
+									<p class="portfolio__desc">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-3.jpg" alt="Лого ресторана Seafood" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Ресторан Seafood</h2>
-									<p class="desc">Приложение</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Ресторан Seafood</h2>
+									<p class="portfolio__desc">Приложение</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-4.jpg" alt="Черные наушники" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
 
-								<div class="portfolio-box">
-									<h2 class="subtitle">Проект Prime</h2>
-									<p class="desc">Маркетинг</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Проект Prime</h2>
+									<p class="portfolio__desc">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-5.jpg" alt="Белая и коричневая коробки" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Проект Boxes</h2>
-									<p class="desc">Приложение</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Проект Boxes</h2>
+									<p class="portfolio__desc">Приложение</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-6.jpg" alt="Веб-сайт на экране монитора" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
 
-								<div class="portfolio-box">
-									<h2 class="subtitle">Inspiration has no Borders</h2>
-									<p class="desc">Веб-сайт</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Inspiration has no Borders</h2>
+									<p class="portfolio__desc">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-7.jpg" alt="Открытый журнал" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Издание Limited Edition</h2>
-									<p class="desc">Дизайн</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Издание Limited Edition</h2>
+									<p class="portfolio__desc">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-8.jpg" alt="Лейбл" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Проект LAB</h2>
-									<p class="desc">Маркетинг</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Проект LAB</h2>
+									<p class="portfolio__desc">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li class="portfolio-items">
-							<a class="portfolio-link link" href="">
-								<div class="portfolio-thumb">
+						<li class="card-set__item">
+							<a class="portfolio__link link" href="">
+								<div class="portfolio__thumb">
 									<img src="./images/project-9.jpg" alt="Работа за ноутбуком" width="370" height="294" />
-									<div class="portfolio-text-thumb">
-										<p class="portfolio-text"
+									<div class="overlay">
+										<p class="overlay__text"
 											>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
 											позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p
 										></div
 									>
 								</div>
-								<div class="portfolio-box">
-									<h2 class="subtitle">Growing Business</h2>
-									<p class="desc">Приложение</p>
+								<div class="portfolio__box">
+									<h2 class="portfolio__subtitle">Growing Business</h2>
+									<p class="portfolio__desc">Приложение</p>
 								</div>
 							</a>
 						</li>
@@ -244,14 +245,16 @@
 
 		<!--Cекція футер-->
 		<footer class="footer">
-			<div class="footer-container container">
-				<div class="fotter-adress-block">
-					<a class="footer-logo logo link" lang="en" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-					<address>
-						<ul class="list">
-							<li class="address-items">
+			<div class="footer__container container">
+				<div class="fotter__adress-block">
+					<a class="footer__logo logo link" lang="en" href="./index.html"
+						>Web<span class="logo__logo-part logo__logo-part--inverse">Studio</span></a
+					>
+					<address class="address">
+						<ul class="address__list list">
+							<li class="address__item">
 								<a
-									class="address link"
+									class="address__link address__link--lighter-color link"
 									href="https://goo.gl/maps/EDcTi23JJFDcdNwB6"
 									target="_blank"
 									rel="noopener norefferer "
@@ -259,47 +262,47 @@
 									г. Киев, пр-т Леси Украинки, 26
 								</a>
 							</li>
-							<li class="address-items">
-								<a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<li class="address__item">
+								<a class="address__link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 							</li>
-							<li class="address-items">
-								<a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+							<li class="address__item">
+								<a class="address__link link" href="tel:+380961111111">+38 096 111 11 11</a>
 							</li>
 						</ul>
 					</address>
 				</div>
-				<div class="footer-socials-block">
-					<strong class="footer-socials-subtitle">Присоединяйтесь</strong>
-					<ul class="footer-socials list">
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="instagram-link">
-								<svg class="footer-socials-icon" width="20px" height="20px">
+				<div class="footer__socials-block">
+					<strong class="footer__subtitle subtitle subtitle--inverse subtitle--centered">Присоединяйтесь</strong>
+					<ul class="socials list">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="instagram-link">
+								<svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#instagram"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="twitter-link">
-								<svg class="footer-socials-icon" width="20px" height="20px">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="twitter-link">
+								<svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#twitter"></use></svg
 							></a>
 						</li>
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="facebook-link"
-								><svg class="footer-socials-icon" width="20px" height="20px">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="facebook-link"
+								><svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#facebook"></use></svg
 							></a>
 						</li>
-						<li class="footer-socials-item">
-							<a class="footer-socials-link" href="#" aria-label="linkedin-link"
-								><svg class="footer-socials-icon" width="20px" height="20px">
+						<li class="socials__item">
+							<a class="socials__link socials__link--dark-theme" href="#" aria-label="linkedin-link"
+								><svg class="socials__icon" width="20px" height="20px">
 									<use href="./images/icons.svg#linkedin"></use></svg
 							></a>
 						</li>
 					</ul>
 				</div>
 				<div class="footer-form-feild">
-					<strong class="footer-form-subtitle">Подпишитесь на рассылку</strong>
+					<strong class="footer__subtitle subtitle subtitle--inverse">Подпишитесь на рассылку</strong>
 
 					<form class="footer-form" autocomplete="off">
 						<input
@@ -309,7 +312,7 @@
 							id="mailing-email"
 							placeholder="E-mail"
 						/>
-						<button class="primary-button footer-btn" type="submit">
+						<button class="button footer-btn" type="submit">
 							Подписаться
 							<svg class="footer-form-icon" width="24px" height="24px">
 								<use href="./images/icons.svg#icon-send"></use>
